<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_sample"
        android:icon="@drawable/ic_menu_disc"
        android:title="@string/menu_sample"
        android:visible="false">
        <menu>

            <!-- Placeholder for samples -->
            <group android:id="@+id/menu_sample_group" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_music"
        android:icon="@drawable/ic_menu_music"
        android:title="@string/menu_music"/>
    <item
        android:id="@+id/menu_pause"
        android:icon="@android:drawable/ic_media_pause"
        android:title="@string/menu_pause"
        android:visible="false"/>
    <item
        android:id="@+id/menu_play"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/menu_play"
        android:visible="false"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_help"/>

</menu>